# MathLib

./: CMakeLists.txt  MathLib.cpp  MathLib.h  matrix.h  vectors.h  vertex.h
tests/: matrix_tests.cpp
