# CMakeList.txt : CMake project for MathLib, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("MathLib")

# Add source to this project's executable.
add_executable (MathLib "MathLib.cpp" "MathLib.h")

# TODO: Add tests and install targets if needed.
